fixing gap and paddings for larger screens

--- a/movie-finder-react/src/components/cards/_MovieCard.scss
+++ b/movie-finder-react/src/components/cards/_MovieCard.scss
@@ -1,12 +1,14 @@
 .cards__wrapper {
     display: grid;
     align-content: center;
-    justify-items: center;
+    justify-items: start;
     grid-template-columns: repeat(auto-fit, minmax(200px , 1fr));
     grid-auto-flow: column;
     gap: 2rem;
     overflow-x: hidden;
     scrollbar-width: none;
+
+    margin-top: 2rem;
   
     &--fill {
       grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
