--- a/movie-finder-react/src/sass/base/_typography.scss
+++ b/movie-finder-react/src/sass/base/_typography.scss
@@ -27,6 +27,7 @@ $primary-text-color : white;
 
 h1 , .h1{
     font-weight: bold;
+    text-align: center;
     color : $primary-font-color;
     font-size: $font-size-big;
 }
