--- a/movie-finder-react/src/sass/components/_MainContent.scss
+++ b/movie-finder-react/src/sass/components/_MainContent.scss
@@ -54,6 +54,7 @@
     .header-filters{
         display: flex;
         flex-direction: column;
+        gap : 1rem;
     }
 
     .header__wrapper{
@@ -62,7 +63,7 @@
         align-items: start;
         justify-content: space-between;
         width: 100%;
-        min-height: 220px;
+        gap : 3rem;
 
         h1{
             max-width: 310px;
